# controll-volume-backend

./: .env.example  Dockerfile  README.md  docker-compose.yaml  makefile  manage.py  pyproject.toml
app/: asgi.py  urls.py  wsgi.py
app/core/: models.py
app/settings/: base.py  cloud.py  local.py
app/store/: admin.py  models.py  serializers.py  urls.py  views.py
app/store/migrations/: 0001_initial.py  0002_trashstations_quantity_max.py  0003_alter_notifications_station.py
